@@ -1,3 +1,7 @@
+* Dialer (ECCP): fix validation that prevented incoming calls from entering
+  OnQueue state.
+* Dialer (ECCP): fix forgotten specification of campaign type on implementation
+  of getcampaignstatus request.
 * Dialer (ECCP): modify many of the ECCP example scripts to get agent and 
   password from the command line.
 * Dialer (ECCP): fix error message for hangup request when agent exists but is 
